--- a/app/styles/login.css
+++ b/app/styles/login.css
@@ -44,6 +44,8 @@
   color: var(--color);
 }
 
+
+
 .title {
   font-size: 2.25rem;
   color: var(--color);
@@ -55,6 +57,7 @@
   display: flex;
   flex-direction: column;
   gap: 1.25rem;
+  width: 100%;
 }
 
 .input {
