--- a/app/styles/navbar.css
+++ b/app/styles/navbar.css
@@ -17,7 +17,7 @@
 }
 
 .navbar-site-logo {
-  height: 3em;
+  height: 4em;
   border-radius: 50%;
   margin: 10px;
 }
@@ -48,6 +48,10 @@
   height: fit-content;
   padding-top: 10px;
   padding-bottom: 10px;
+  z-index: 20000;
+  position: sticky;
+  top: 0px;
+  background: rgb(33, 33, 33);
 }
 
 .navbar-dropbtn {
@@ -364,20 +368,27 @@
   border: 1px solid var(--seekbar);
   border-radius: 6px;
   font-weight: 500;
-  font-size: 16px;
+  font-size: 20px;
   transition: all 0.3s ease;
   cursor: pointer;
   outline: none;
 }
 
+.navbar-login-button {
+  position: relative;
+  top: -1px;
+}
+
+
+ 
 .nav-site-logo {
-  height: 50px;
+  /* height: 50px; */
   border-radius: 50%;
   margin: 10px;
 }
 
 .nav-site-title {
-  font-size: 1.6rem;
+  font-size: 2em;
   font-weight: 500;
 }
 
@@ -416,31 +427,57 @@
 
 /* Responsive styles */
 @media screen and (max-width: 768px) {
+
   .navbar-signup-button,
   .navbar-login-button {
     padding: 8px 16px;
-    font-size: 14px;
+    font-size: 20px;
+  }
+
+}
+
+@media screen and (max-width:420px) {
+
+  .navbar-signup-button,
+  .navbar-login-button {
+    padding: 6px 12px;
+    font-size: 20px;
+  }
+
+  .nav-site-title {
+    display: none;
+  }
+  .navbar-signup-button {
+    padding: 6px 10px
   }
 }
 
 @media screen and (max-width: 480px) {
+
   .navbar-signup-button,
   .navbar-login-button {
     padding: 6px 12px;
-    font-size: 12px;
+    font-size: 20px;
   }
-  
+
   .navbar-signup-button:hover,
   .navbar-login-button:hover {
     transform: translateY(-1px);
   }
+  .navbar-signup-button {
+    padding: 6px 10px
+  }
 }
 
 @media screen and (max-width: 320px) {
+
   .navbar-signup-button,
   .navbar-login-button {
     padding: 5px 10px;
     font-size: 11px;
+  }
+  .navbar-signup-button {
+    padding: 6px 10px
   }
 }
 
@@ -1064,7 +1101,7 @@
   }
 
   .navbar-site-logo {
-    height: 3em;
+    height: 3.5em;
     margin: 0px;
   }
 
@@ -1333,7 +1370,7 @@
 
   .navbar-notification {
     padding: 12px;
-    display: none;
+    /* display: none; */
   }
 
   .navbar-notification-icon {
